fix overflow input

--- a/05-amigo-secreto/style.css
+++ b/05-amigo-secreto/style.css
@@ -93,6 +93,7 @@ body {
 
 .form__input {
   flex: 1;
+  width: 100%;
   height: 50px;
   font-size: 16px;
   padding-left: 15px;
